--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.103.2
 uvicorn==0.22.0
 opencv-python==4.8.1.78
 Pillow==9.5.0
-numpy==1.21.6
+numpy==1.26.2
 pymongo==4.6.1
 insightface==0.7.3
 tqdm==4.66.1
@@ -10,3 +10,5 @@ PyYAML~=6.0.1
 pyaml-env~=1.2.1
 pytest==7.4.3
 flake8==5.0.4
+onnxruntime==1.16.3
+python-multipart==0.0.6
